scripts/record-site-animations/sample-app/.helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
spec:
  type: ClusterIP
  selector:
    app: sample-app
  ports:
  - name: http
    port: 3000
